# android-ble-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
java/: classes.dex
src/: adapter.rs  async_util.rs  bindings.rs  btuuid.rs  callback.rs  characteristic.rs  descriptor.rs  device.rs  error.rs  event_receiver.rs  gatt_tree.rs  java-spaghetti.toml  jni.rs  l2cap_channel.rs  lib.rs  service.rs  types.rs  util.rs  vm_context.rs
