[package]
name = "android-ble"
version = "0.1.1"
authors = ["wuwbobo2021 <wuwbobo@outlook.com>"]
edition = "2021"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/android-ble-rs"
readme = "README.md"
description = """
Android Bluetooth API wrapper, currently supporting BLE client role operations.
"""
keywords = ["bluetooth", "ble", "gatt", "android", "bluest"]
categories = ["api-bindings", "hardware-support"]

[package.metadata.docs.rs]
features = ["serde"]
default-target = "aarch64-linux-android"
targets = [
    "aarch64-linux-android",
]

[features]
serde = ["dep:serde", "uuid/serde"]

[dependencies]
uuid = "1.17.0"
java-spaghetti = "0.2.0"
ndk-context = "0.1.1"
futures-core = "0.3.28"
futures-lite = "1.13.0"
futures-timer = "3.0.3"
async-channel = "2.2.0"
async-broadcast = "0.7.2"
async-lock = "3.4.0"
log = "0.4.27"
piper = "0.2.4"
serde = { version = "1.0.143", optional = true, features = ["derive"] }

[build-dependencies]
android-build = "0.1.3"

[lib]
name = "android_ble"
